js/js.translator/testData/incremental/invalidation/removeUnusedFile/main/m.kt
fun box(): String {
    if (foo0() != 42) return "Fail"
    return "OK"
}
